test/error/ast/CaseLabelNotConst.mod
MODULE CaseLabelNotConst;
VAR x, y: INTEGER;
BEGIN
  CASE x OF y: ; END;
END CaseLabelNotConst.
